<resources>
    <string name="app_name">testApp</string>
    <string name="cam_button">Camera</string>
    <string name="switch_but">Add Clothes</string>
    <string name="switch_but2">Wardrobe</string>
    <string name="t_shirt">T-shirt</string>
    <string name="trousers">Trousers</string>
    <string name="over_top">Jacket</string>
    <string name="confirm">Confirm Item</string>
    <string name="itemAddDefault">Please enter the item name and catergory here:</string>
    <string name="list_all">Show all items in the wardrobe</string>
    <string name="back">Back</string>
    <string name="type1">Top</string>
    <string name="type2">Under-top</string>
    <string name="type3">Bottom</string>
    <string name="confirmation">Confirm</string>
    <string name="Title">Welcome to Smart Style</string>
</resources>