<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    tools:context=".itemAdding">

    <Button
        android:id="@+id/ConfirmChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="16dp"
        android:onClick="itemAdd"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/printAllItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="showAllItems"
        android:text="@string/list_all"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToMain"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/itemAddInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="322dp"
        android:layout_height="508dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="#9965F4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ConfirmChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734">

        <ImageView
            android:id="@+id/itemPicLayout"
            android:layout_width="match_parent"
            android:layout_height="304dp" />

        <Button
            android:id="@+id/cameraBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dispatchTakePictureIntent"
            android:text="Take a Picture" />

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addClothesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="ClothesName" />

            <RadioGroup
                android:id="@+id/itemTypeGroup"
                android:layout_width="115dp"
                android:layout_height="179dp">

                <RadioButton
                    android:id="@+id/topButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type1" />

                <RadioButton
                    android:id="@+id/underShirtButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type2" />

                <RadioButton
                    android:id="@+id/bottomsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type3" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/itemAddInfo"
        android:layout_width="325dp"
        android:layout_height="86dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text="@string/itemAddDefault"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>